// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProposalTable Component Render the ProposalTable Component having populated props with no errors 1`] = `
<ProposalTable
  proposals={
    Array [
      Object {
        "instruments": Object {
          "scam": Array [
            Object {
              "dictatorMode": "NORMAL",
            },
          ],
        },
        "maxSeeing": 2,
        "timeRequests": Array [
          Object {
            "distribution": Array [
              Object {
                "partnerCode": "RSA",
                "time": 150,
              },
              Object {
                "partnerCode": "UW",
                "time": 200,
              },
              Object {
                "partnerCode": "IUCAA",
                "time": 250,
              },
            ],
            "semester": "2018-1",
          },
          Object {
            "distribution": Array [
              Object {
                "partnerCode": "RSA",
                "time": 400,
              },
              Object {
                "partnerCode": "UW",
                "time": 50,
              },
            ],
            "semester": "2018-1",
          },
        ],
        "transparency": "Clear",
      },
      Object {
        "instruments": Object {
          "scam": Array [
            Object {
              "dictatorMode": "NORMAL",
            },
          ],
        },
        "maxSeeing": 2,
        "timeRequests": Array [
          Object {
            "distribution": Array [
              Object {
                "partnerCode": "RSA",
                "time": 150,
              },
              Object {
                "partnerCode": "UW",
                "time": 200,
              },
              Object {
                "partnerCode": "IUCAA",
                "time": 250,
              },
            ],
            "semester": "2017-1",
          },
          Object {
            "distribution": Array [
              Object {
                "partnerCode": "RSA",
                "time": 400,
              },
              Object {
                "partnerCode": "UW",
                "time": 50,
              },
            ],
            "semester": "2018-1",
          },
        ],
        "transparency": "Thin cloud",
      },
    ]
  }
>
  <div>
    <table
      className="table left-table"
    >
      <thead>
        <tr>
          <th />
          <th>
            <h2>
              Total
            </h2>
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td>
            <h3>
              New proposals plus older proposals
            </h3>
          </td>
          <td>
            <h3>
              2
            </h3>
          </td>
        </tr>
        <tr>
          <td>
            <h3>
              New proposals 
            </h3>
          </td>
          <td>
            <h3>
              0
            </h3>
          </td>
        </tr>
        <tr>
          <td>
            <h3>
              Older Proposals 
            </h3>
          </td>
          <td>
            <h3>
              2
            </h3>
          </td>
        </tr>
        <tr>
          <td>
            <h3>
              All long term proposals 
            </h3>
          </td>
          <td>
            <h3>
              0
            </h3>
          </td>
        </tr>
        <tr>
          <td>
            <h3>
              New long term proposals 
            </h3>
          </td>
          <td>
            <h3>
              0
            </h3>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</ProposalTable>
`;

exports[`ProposalTable Component Render the ProposalTable Component having unpopulated props with no errors 1`] = `
<ProposalTable
  proposals={Array []}
>
  <div>
    <table
      className="table left-table"
    >
      <thead>
        <tr>
          <th />
          <th>
            <h2>
              Total
            </h2>
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td>
            <h3>
              New proposals plus older proposals
            </h3>
          </td>
          <td>
            <h3>
              0
            </h3>
          </td>
        </tr>
        <tr>
          <td>
            <h3>
              New proposals 
            </h3>
          </td>
          <td>
            <h3>
              0
            </h3>
          </td>
        </tr>
        <tr>
          <td>
            <h3>
              Older Proposals 
            </h3>
          </td>
          <td>
            <h3>
              0
            </h3>
          </td>
        </tr>
        <tr>
          <td>
            <h3>
              All long term proposals 
            </h3>
          </td>
          <td>
            <h3>
              0
            </h3>
          </td>
        </tr>
        <tr>
          <td>
            <h3>
              New long term proposals 
            </h3>
          </td>
          <td>
            <h3>
              0
            </h3>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</ProposalTable>
`;
